// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders snapshot of content 1`] = `
.emotion-0 {
  display: block;
  position: relative;
  padding: 16px;
  background-color: #FFFFFF;
  border: 1px solid rgba(5, 25, 45, 0.15);
  border-radius: 4px;
  -webkit-transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),-webkit-transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
}

.emotion-0:where(a, button) {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

.emotion-0:focus-within {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

<section
  class="emotion-0"
>
  <h3>
    Taylor Swift
  </h3>
  <p>
    Better than Jimmy Page.
  </p>
</section>
`;

exports[`Card renders snapshot of focused card 1`] = `
.emotion-0 {
  display: block;
  position: relative;
  padding: 16px;
  background-color: #FFFFFF;
  border: 1px solid rgba(5, 25, 45, 0.15);
  border-radius: 4px;
  -webkit-transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),-webkit-transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  box-shadow: 0 0 0 2px #009BD8;
}

.emotion-0:where(a, button) {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  box-shadow: 0 0 0 2px #009BD8,0px 3px 5px -1px rgba(5, 25, 45, 0.3);
}

<a
  class="emotion-0"
  href="http://taylorswift.com"
>
  Taylor Swift Website
</a>
`;

exports[`Card renders snapshot of headstones and content 1`] = `
.emotion-0 {
  display: block;
  position: relative;
  padding: 16px;
  padding-top: 28px;
  background-color: #FFFFFF;
  border: 1px solid rgba(5, 25, 45, 0.15);
  border-radius: 4px;
  -webkit-transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),-webkit-transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
}

.emotion-0:where(a, button) {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

.emotion-0:focus-within {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  top: -20px;
  left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.emotion-2 {
  background: #05192D;
  color: #FFFFFF;
  border-radius: 40px;
  font-size: 20px;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  line-height: 40px;
  width: 40px;
  height: 40px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: hidden;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3>* {
  margin: auto 0;
  min-height: 22px;
}

.emotion-3>svg {
  width: 22px;
}

.emotion-3>:not(svg) {
  min-width: 100%;
}

<section
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        A
      </div>
    </div>
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        B
      </div>
    </div>
  </div>
  <p>
    Taylor Swift
  </p>
</section>
`;

exports[`Card renders snapshot of inverted 1`] = `
.emotion-0 {
  display: block;
  position: relative;
  padding: 16px;
  padding-top: 28px;
  background-color: #213147;
  border: 1px solid rgba(255, 255, 255, 0.15);
  border-radius: 4px;
  -webkit-transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),-webkit-transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
}

.emotion-0:where(a, button) {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

.emotion-0:focus-within {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  top: -20px;
  left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.emotion-2 {
  background: #FFFFFF;
  color: #05192D;
  border-radius: 40px;
  font-size: 20px;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  line-height: 40px;
  width: 40px;
  height: 40px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: hidden;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3>* {
  margin: auto 0;
  min-height: 22px;
}

.emotion-3>svg {
  width: 22px;
}

.emotion-3>:not(svg) {
  min-width: 100%;
}

<section
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        A
      </div>
    </div>
  </div>
  <p>
    Taylor Swift
  </p>
</section>
`;

exports[`Card renders snapshot of the card with hover disabled 1`] = `
.emotion-0 {
  display: block;
  position: relative;
  padding: 16px;
  background-color: #FFFFFF;
  border: 1px solid rgba(5, 25, 45, 0.15);
  border-radius: 4px;
  -webkit-transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),-webkit-transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
}

.emotion-0:where(a, button) {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<section
  class="emotion-0"
>
  <h3>
    Taylor Swift
  </h3>
  <p>
    Better than Jimmy Page.
  </p>
</section>
`;
